<?xml version="1.0"?>
<package format="3">
  <name>ros_components_description</name>
  <version>0.1.0</version>
  <description>URDF descriptions of components offered with Husarion robots</description>

  <maintainer email="support@husarion.com">Husarion</maintainer>
  <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>
  <maintainer email="pawel.kowalski@husarion.com">Pawel Kowalski</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_description/tree/ros1</url>
  <url type="bugtracker">https://github.com/husarion/panther_description/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>